--- a/drew.html
+++ b/drew.html
@@ -1,4 +1,66 @@
-<html><body style="background:#0e0e0e;color:#fff;font-family:monospace;text-align:center;">
-<h1>DREW</h1>
-<p>Echo forming...</p>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DREW — Coming Soon</title>
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        font-family: Arial, sans-serif;
+        background: radial-gradient(circle at center, #0f0f0f 0%, #000000 90%);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .logo {
+        width: clamp(200px, 40vw, 480px);
+        filter: drop-shadow(0 0 18px #00E0FF);
+    }
+
+    .tag {
+        font-size: clamp(16px, 3vw, 28px);
+        margin-top: 20px;
+        text-align: center;
+        max-width: 90%;
+    }
+
+    .btn {
+        margin-top: 38px;
+        background: #00c8ff;
+        padding: 14px 32px;
+        border-radius: 6px;
+        font-size: 18px;
+        text-decoration: none;
+        color: #000;
+        font-weight: bold;
+        transition: 0.2s;
+        box-shadow: 0 0 14px #00e6ff;
+    }
+
+    .btn:hover {
+        background: #17f4ff;
+        box-shadow: 0 0 22px #00f7ff;
+    }
+</style>
+
+</head>
+<body>
+
+<img src="drewlogo.jpeg" class="logo" alt="DREW Logo">
+
+<div class="tag">
+A brighter future for men’s mental health — on-chain and community-powered.
+</div>
+
+<a href="#" class="btn">Connect Xaman Wallet (Soon)</a>
+
+</body>
+</html>
