--- a/index.html
+++ b/index.html
@@ -6,111 +6,82 @@
 <title>S T A T ! C — Portal</title>
 
 <style>
-    body {
+    body, html {
         margin: 0;
         padding: 0;
         height: 100vh;
         width: 100vw;
         overflow: hidden;
-        background: black;
         font-family: "Courier New", monospace;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        background: black;
     }
 
-    #static-bg {
-        position: fixed;
-        inset: 0;
+    /* SPLIT HERO LAYOUT */
+    .top-half, .bottom-half {
+        width: 100%;
+        height: 50vh;
+        position: relative;
+    }
+
+    /* Static */
+    .top-half video {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        filter: brightness(0.55) contrast(1.2);
-        z-index: -1;
+        filter: brightness(0.5) contrast(1.3);
     }
 
-    .static-text {
-        font-size: clamp(40px, 14vw, 140px);
-        letter-spacing: clamp(6px, 2vw, 22px);
-        color: #fff;
-        text-decoration: none;
-        cursor: pointer;
-        user-select: none;
-        z-index: 5;
-        margin-bottom: 3vh;
+    /* DREW animation */
+    .bottom-half video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(0.85) saturate(1.4);
     }
 
-    .drew-btn {
+    /* CLICKABLE DREW OVERLAY */
+    .bottom-link {
+        position: absolute;
+        inset: 0;
         display: flex;
+        align-items: center;
         justify-content: center;
-    }
-
-    .drew-btn img {
-        width: clamp(110px, 26vw, 260px);
-        filter: drop-shadow(0 0 18px #00f5ff);
         cursor: pointer;
-        transition: 0.12s ease;
+        text-decoration: none;
     }
 
-    .drew-btn img:hover {
-        transform: scale(1.08);
-        filter: drop-shadow(0 0 32px #00faff);
+    .drew-label {
+        font-size: clamp(48px, 14vw, 150px);
+        font-weight: 900;
+        letter-spacing: 0.1em;
+        background: linear-gradient(90deg, #00faff, #ff00f0);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow: 0 0 15px #00faff;
     }
-
 </style>
-
 </head>
+
 <body>
 
-<!-- Background Static Video -->
-<video id="static-bg" autoplay muted loop playsinline>
-    <source src="tv_static.mp4" type="video/mp4">
-</video>
-
-<!-- STATIC Button -->
-<a href="static.html" class="static-text" id="glitchWord">S T A T ! C</a>
-
-<!-- DREW Button -->
-<div class="drew-btn">
-    <a href="drew.html">
-        <img src="drewlogo.jpeg" alt="DREW Token">
-    </a>
+<!-- 🔺 TOP STATIC -->
+<div class="top-half">
+    <video autoplay muted loop playsinline>
+        <source src="tv_static.mp4" type="video/mp4">
+    </video>
 </div>
 
-<script>
-const glyphs = {
-  "S": ["S","5","§"],
-  "T": ["T","7","†"],
-  "A": ["A","Λ","4"],
-  "!": ["!","¡","︕"],
-  "C": ["C","⊂","↻"]
-};
+<!-- 🔻 BOTTOM DREW ANIMATION -->
+<div class="bottom-half">
+    <video autoplay muted loop playsinline>
+        <source src="text-to-video-dc67619f.mp4" type="video/mp4">
+    </video>
 
-const container = document.getElementById("glitchWord");
-let base = container.innerText.replace(/\s+/g, "").split("");
-
-container.innerHTML = "";
-base.forEach(l => {
-  let span = document.createElement("span");
-  span.className = "char";
-  span.dataset.base = l;
-  span.textContent = l;
-  container.appendChild(span);
-});
-
-const chars = document.querySelectorAll(".char");
-
-function flicker() {
-  chars.forEach((el, i) => {
-    const set = glyphs[el.dataset.base] ?? [el.dataset.base];
-    el.textContent = set[Math.random() * set.length | 0];
-    setTimeout(() => { el.textContent = el.dataset.base; }, 120 + i * 40);
-  });
-}
-
-setInterval(flicker, 260);
-</script>
+    <!-- CLICK AREA TO OPEN NEXT PAGE -->
+    <a href="drew.html" class="bottom-link">
+        <div class="drew-label">DREW</div>
+    </a>
+</div>
 
 </body>
 </html>
